--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0.1
+-----
+
+- Make sure no empty view lines  (and no newline at the end of view lines string) are saved when saving plugin settings,
+- Set plugin defaults in activate.php instead of doing it via start.php.
+
 2.0.0
 -----
 
