Updated to version 2.3.2; changes see CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+2.3.2
+-----
+
+- Correctly save "Change vote" plugin settings value (thanks to oseg for reporting the issue and providing the fix).
+
 2.3.1
 -----
 
