Updated to version 2.3.3; changes see CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.3.3
+-----
+
+- Fix for Elggx Fivestar to work also on PHP 7.x,
+- Rework Elggx Fivestar plugin settings form.
+
 2.3.2
 -----
 
