Updated to version 2.3.4; changes see CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.3.4
+-----
+
+- Code cleanup and some rework,
+- Elggx Fivestar plugin settings can now be found at the Elgg default plugin settings section in the admin area.
+
 2.3.3
 -----
 
