--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+3.3.1
+-----
+
+- Updated simple_html_dom.php library to version 1.9.1 (fixes a PHP warning previously occuring on PHP 7.3/7.4).
 
 3.3.0
 -----
